Fragmentの変更に伴って使用するための設定変更

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity
             android:name=".GEOShopActivity"
             android:exported="false" />
+        <activity android:name=".GEOShopHostActivity" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
